manifests/simpson/3.homer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  labels:
    app: homer
  name: homer-deployment
  namespace: simpson
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
      creationTimestamp: null
      labels:
        app: homer
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/openshift-examples/container-helper:ubi8-minimal
        imagePullPolicy: Always
        name: container-helper
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /container-helper/
          name: container-helper-yaml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: homer-container-helper-yaml-f8m6846t79
        name: container-helper-yaml
